--- a/Thesis_Misc/indexBuses.html
+++ b/Thesis_Misc/indexBuses.html
@@ -3,6 +3,7 @@
 <head>
     <title>Scenario Bus Routes</title>
     <meta charset="utf-8" />
+    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -184,7 +185,7 @@
         function onEachFeature(feature, layer) {
             layer.on({
                 mouseover: highlightFeature,
-                mouseout: resetHighlight,
+                mouseout: resetHighlight
             });
         }
 
@@ -233,5 +234,17 @@
 
 
 </script>
+
+<p>TeX: \(\frac a b\)</p>
+<p>$$Gamma Accessibility_i =$$</p>
+
+<p>
+   $$\sum \frac{Jobs_i}{\sum^{i=1}_{i=986} Jobs_i} * TravelTime^{-.503} * e^{-0.078 * TravelTime_{ij}} $$
+</p>
+
+    <span>frac{Jobs_i}{\sum^{i=1}_{i=986}Jobs_i}} * TravelTime^{-.503}_{ij}*e^{-0.078*TravelTime_{ij}</span>
+<p>
+    $$\sum_{i=0}^n i^2 = \frac{(n^2+n)(2n+1)}{6}$$
+</p>
 </body>
 </html>
