--- a/Thesis_Misc/index.html
+++ b/Thesis_Misc/index.html
@@ -111,7 +111,7 @@
                 <a href="docs/DowdProcessBook.pdf" target="_blank">Process Book</a>
             </li>
             <li>
-                <a href="#" data-toggle="modal" data-target="#accessModal" >Use Video</a>
+                <a href="http://youtu.be/IjDiOB4HjBk" target="_blank" >Use Video</a>
             </li>
         </ul>
     </div>
@@ -153,7 +153,7 @@
                     When modeling inundation in the Cube model system, I assume that all users of the sytem will attempt to complete their trip even if portions of the region are inundated.
                     I am modeling a normal day where the transport network is compromised but people still attempt to complete their normal trips, if possible.
                 </p>
-                <h4><em>For information on using and interpreting this visualization please reference the</em> <a href="#" target="_blank">Use Video.</a></h4>
+                <h4><em>For information on using and interpreting this visualization please reference the</em> <a href="http://youtu.be/IjDiOB4HjBk" target="_blank">Use Video.</a></h4>
                 <h2>Inundated Assets</h2>
                     <div class="btn-group-horizontal btn-group" id = "AssetSelection">
                         <div class="Btype slider">
