Update basemap id

--- a/Thesis_Misc/index.html
+++ b/Thesis_Misc/index.html
@@ -810,14 +810,14 @@
         L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
             maxZoom: 18,
             minZoom: 11,
-            id: 'examples.map-20v6611k'
+            id: 'mdowd.n6anai1b'
         }).addTo(map);
 
         map2 = L.map("map2").setView([42.3596, -71.0561], 10);
         L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
             maxZoom: 18,
             minZoom: 9,
-            id: 'examples.map-20v6611k'
+            id: 'mdowd.n6anai1b'
         }).addTo(map2);
 
 
@@ -825,21 +825,21 @@
         L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
             maxZoom: 18,
             minZoom: 9,
-            id: 'examples.map-20v6611k'
+            id: 'mdowd.n6anai1b'
         }).addTo(map3);
 
         map4 = L.map("map4").setView([42.3596, -71.0561], 12);
         L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
             maxZoom: 18,
             minZoom: 9,
-            id: 'examples.map-20v6611k'
+            id: 'mdowd.n6anai1b'
         }).addTo(map4);
 
         map5 = L.map("map5").setView([42.3596, -71.0561],12);
         L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
             maxZoom: 18,
             minZoom: 9,
-            id: 'examples.map-20v6611k'
+            id: 'mdowd.n6anai1b'
         }).addTo(map5);
 
         L.control.scale().addTo(map);
